# web_scrapper

./: .gitignore  QWEN.md  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json
.devcontainer/scripts/: post-create-commands.sh
.qwen/: settings.json
archive/nym.com/about/: page.md
archive/nym.com/anonymous-stats/: page.md
archive/nym.com/contact/: page.md
archive/nym.com/docs/: page.md
archive/nym.com/explorer/: page.md
archive/nym.com/idp/: page.md
archive/nym.com/imprint/: page.md
archive/nym.com/index/: page.md
archive/nym.com/mixnet/: page.md
archive/nym.com/nym-whitepaper.pdf/: page.md
archive/nym.com/nymvpn-litepaper/: page.md
archive/nym.com/operators-validators-terms/: page.md
archive/nym.com/press/: page.md
archive/nym.com/pricing/: page.md
archive/nym.com/privacy-hub/: page.md
archive/nym.com/token/: page.md
archive/nym.com/trust-center/: page.md
archive/nym.com/vdp-bbp/: page.md
archive/nym.com/vpn-privacy-statement/: page.md
archive/nym.com/vpn-terms/: page.md
archive/nym.com/zk-nyms/: page.md
src/web_scrapper/: cli.py
src/web_scrapper/core/: __init__.py  archiver.py  crawler.py  models.py  robots_checker.py  tracker.py
src/web_scrapper/infrastructure/: __init__.py  local_storage.py  playwright_renderer.py
src/web_scrapper/interfaces/: __init__.py  renderer.py  storage.py
tests/: conftest.py  test_archiver.py  test_crawler.py  test_renderer.py  test_robots_checker.py  test_storage.py  test_tracker.py
(+34 files in other folders)
